对象型聚合函数泛型调整